<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/sv_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_margin="16dp"
    android:scrollbars="none"
    >
        <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


                <TextView
                    android:id="@+id/tv_ingredients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="fnaskgnlkng \n ldksnaflk /jdnfkdnsf /asgkndknkgnkasdnk"/>

                <it.bake.com.example.sanketk.bakeit.model.StatefulRecyclerView
                    android:id="@+id/rv_steps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ingredients"
                    android:layout_marginBottom="30dp"/>
        </android.support.constraint.ConstraintLayout>
</ScrollView>