<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="7dp"
    app:cardCornerRadius="6dp"
    android:id="@+id/cv_recipe">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/card_background"
        >

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="nutella pie"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            />


        <ImageView
            android:id="@+id/iv_recipe"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pie"

            />


        <TextView
            android:id="@+id/tv_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="servings :"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="parent"/>






    </LinearLayout>
</android.support.v7.widget.CardView>